[gd_scene load_steps=6 format=3 uid="uid://bvor5tpqyel03"]

[ext_resource type="Script" path="res://scripts/house.gd" id="1_ux4y7"]
[ext_resource type="Texture2D" uid="uid://b5w51aw7o2yyk" path="res://assets/other_sprite/my_home.png" id="2_rne1x"]
[ext_resource type="FontFile" uid="uid://cwcaplp4jc5ep" path="res://assets/Comfortaa-VariableFont_wght.ttf" id="3_r8e4a"]
[ext_resource type="PackedScene" uid="uid://bsok6oiuh1r5w" path="res://scenes/special_stone.tscn" id="4_2oqpd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ekvm6"]
size = Vector2(52, 37)

[node name="house" type="Area2D"]
script = ExtResource("1_ux4y7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 13.5)
shape = SubResource("RectangleShape2D_ekvm6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_rne1x")

[node name="lock_label" type="Label" parent="."]
visible = false
offset_left = -43.0
offset_top = -59.0
offset_right = 43.0
offset_bottom = -36.0
theme_override_fonts/font = ExtResource("3_r8e4a")
theme_override_font_sizes/font_size = 13
text = "Door Locked"
horizontal_alignment = 1
vertical_alignment = 1

[node name="special_stone" parent="." instance=ExtResource("4_2oqpd")]
visible = false
position = Vector2(52, 16)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
